added profile information
